// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`templates render against sample.md > emerald-twocol renders without throwing 1`] = `
<div>
  <article
    class="resumex-page-frame kt-frame"
    style="width: 210mm; height: 297mm; position: relative; overflow: hidden; background: white; margin: 0px auto;"
  >
    <div
      class="kt-root"
      style="width: 210mm; min-height: 297mm; zoom: 1;"
    >
      <div
        class="kt-grid"
      >
        <header
          class="kt-head"
        >
          <div>
            <h1
              class="kt-name"
            >
              Avery
               
              <span
                class="kt-name-grad"
              >
                Park
              </span>
              .
            </h1>
            <span
              class="kt-rolepill"
            >
              <span
                class="dot"
              />
              senior software engineer · platform
            </span>
          </div>
          <div
            class="kt-contact"
          >
            <div>
              <a
                href="mailto:avery@example.com"
              >
                avery@example.com
              </a>
            </div>
            <div>
              New York, NY
            </div>
            <div>
              <a
                href="https://example.com"
              >
                example.com
              </a>
            </div>
            <div>
              <a
                href="https://github.com"
              >
                github.com
              </a>
            </div>
            <div>
              <a
                href="https://linkedin.com"
              >
                linkedin.com
              </a>
            </div>
          </div>
        </header>
        <section
          class="kt-about"
        >
          <span
            class="kt-eyebrow"
          >
            about
          </span>
          <div>
            <p>
              I build 
              <strong>
                resilient backend systems and the platforms that run them
              </strong>
              . I prefer small, reversible changes and clear interfaces. Software should be 
              <em>
                boring in production
              </em>
               and useful to its users.
            </p>
          </div>
        </section>
        <aside
          class="kt-side"
        >
          <div
            class="kt-side-section"
          >
            <span
              class="kt-eyebrow"
            >
              stack
            </span>
            <div
              class="kt-skill-group"
            >
              <p
                class="label"
              >
                // 
                languages
              </p>
              <div
                class="chips"
              >
                <span
                  class="kt-chip"
                >
                  Go
                </span>
                <span
                  class="kt-chip"
                >
                  TypeScript
                </span>
                <span
                  class="kt-chip"
                >
                  Python
                </span>
                <span
                  class="kt-chip"
                >
                  Rust
                </span>
              </div>
            </div>
            <div
              class="kt-skill-group"
            >
              <p
                class="label"
              >
                // 
                backend
              </p>
              <div
                class="chips"
              >
                <span
                  class="kt-chip"
                >
                  Postgres
                </span>
                <span
                  class="kt-chip"
                >
                  Redis
                </span>
                <span
                  class="kt-chip"
                >
                  Kafka
                </span>
                <span
                  class="kt-chip"
                >
                  gRPC
                </span>
                <span
                  class="kt-chip"
                >
                  GraphQL
                </span>
              </div>
            </div>
            <div
              class="kt-skill-group"
            >
              <p
                class="label"
              >
                // 
                frontend
              </p>
              <div
                class="chips"
              >
                <span
                  class="kt-chip"
                >
                  React
                </span>
                <span
                  class="kt-chip"
                >
                  Next.js
                </span>
                <span
                  class="kt-chip"
                >
                  Tailwind
                </span>
                <span
                  class="kt-chip"
                >
                  Vite
                </span>
              </div>
            </div>
            <div
              class="kt-skill-group"
            >
              <p
                class="label"
              >
                // 
                platform
              </p>
              <div
                class="chips"
              >
                <span
                  class="kt-chip"
                >
                  AWS
                </span>
                <span
                  class="kt-chip"
                >
                  Kubernetes
                </span>
                <span
                  class="kt-chip"
                >
                  Docker
                </span>
                <span
                  class="kt-chip"
                >
                  Terraform
                </span>
                <span
                  class="kt-chip"
                >
                  GitHub Actions
                </span>
              </div>
            </div>
          </div>
          <div
            class="kt-side-section"
          >
            <span
              class="kt-eyebrow"
            >
              projects
            </span>
            <div
              class="kt-side-entry"
            >
              <h4
                class="title"
              >
                Loomroute
              </h4>
              <div
                class="sub"
              >
                loomroute.dev
              </div>
              <div
                class="kt-side-entry-body"
              >
                <p>
                  Open-source URL routing library used by ~200 small SaaS apps. Live since 2024.
                </p>
              </div>
              <div
                class="meta-line"
              >
                Live
              </div>
            </div>
            <div
              class="kt-side-entry"
            >
              <h4
                class="title"
              >
                Tinytrace
              </h4>
              <div
                class="sub"
              >
                github.com/example/tinytrace
              </div>
              <div
                class="kt-side-entry-body"
              >
                <p>
                  Minimal distributed tracing library - span model, OTLP export, ~3k lines.
                </p>
              </div>
              <div
                class="meta-line"
              >
                OSS
              </div>
            </div>
          </div>
          <div
            class="kt-side-section"
          >
            <span
              class="kt-eyebrow"
            >
              awards
            </span>
            <div
              class="kt-side-entry"
            >
              <h4
                class="title"
              >
                Engineering Excellence
              </h4>
              <div
                class="sub"
              >
                Coral Labs
              </div>
              <div
                class="meta-line"
              >
                2025
              </div>
            </div>
            <div
              class="kt-side-entry"
            >
              <h4
                class="title"
              >
                Best Internship Project
              </h4>
              <div
                class="sub"
              >
                Bytework
              </div>
              <div
                class="meta-line"
              >
                2018
              </div>
            </div>
          </div>
          <div
            class="kt-side-section"
          >
            <span
              class="kt-eyebrow"
            >
              education
            </span>
            <div
              class="kt-side-entry"
            >
              <h4
                class="title"
              >
                B.S. Computer Science
              </h4>
              <div
                class="sub"
              >
                Northern State University
              </div>
              <div
                class="meta-line"
              >
                2014 – 2018
              </div>
            </div>
          </div>
        </aside>
        <main
          class="kt-main"
        >
          <div
            class="kt-section"
          >
            <div
              class="kt-section-title"
            >
              <span
                class="kt-eyebrow"
              >
                experience
              </span>
            </div>
            <div
              class="kt-section-group"
            >
              <div
                class="kt-group-head"
              >
                <h3>
                  Coral Labs
                </h3>
                <span
                  class="tenure"
                >
                  Aug 2022 – Present
                </span>
              </div>
              <div
                class="kt-entry"
              >
                <div
                  class="kt-entry-head"
                >
                  <div
                    class="left"
                  >
                    <span
                      class="idx"
                    >
                      01
                    </span>
                    <span
                      class="role"
                    >
                      Senior Software Engineer
                    </span>
                    <span
                      class="team"
                    >
                      New York, NY
                    </span>
                  </div>
                  <span
                    class="dates"
                  >
                    Mar 2024 – Present
                  </span>
                </div>
                <ul
                  class="kt-bullets"
                >
                  <li>
                    <p>
                      Led the migration of the events pipeline to a 
                      <strong>
                        horizontally-sharded Kafka cluster
                      </strong>
                      , reducing p99 latency by 3x.
                    </p>
                  </li>
                  <li>
                    <p>
                      Owned the on-call rotation for the platform team - 
                      <strong>
                        reduced pages 60%
                      </strong>
                       over two quarters through better alerting and runbooks.
                    </p>
                  </li>
                  <li>
                    <p>
                      Mentored four engineers through L4 → L5 promotions.
                    </p>
                  </li>
                </ul>
              </div>
              <div
                class="kt-entry"
              >
                <div
                  class="kt-entry-head"
                >
                  <div
                    class="left"
                  >
                    <span
                      class="idx"
                    >
                      02
                    </span>
                    <span
                      class="role"
                    >
                      Software Engineer 2
                    </span>
                    <span
                      class="team"
                    >
                      New York, NY
                    </span>
                  </div>
                  <span
                    class="dates"
                  >
                    Aug 2022 – Mar 2024
                  </span>
                </div>
                <ul
                  class="kt-bullets"
                >
                  <li>
                    <p>
                      Designed and shipped the 
                      <strong>
                        billing pipeline
                      </strong>
                       processing 12M events/day on Kafka + Postgres.
                    </p>
                  </li>
                  <li>
                    <p>
                      Built the 
                      <strong>
                        internal feature-flag service
                      </strong>
                       used across 40+ microservices.
                    </p>
                  </li>
                  <li>
                    <p>
                      Drove 
                      <strong>
                        architecture-level reviews
                      </strong>
                       for cross-team launches.
                    </p>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="kt-section-group"
            >
              <div
                class="kt-group-head"
              >
                <h3>
                  Acme Inc
                </h3>
                <span
                  class="tenure"
                >
                  Jan 2020 – Jul 2022
                </span>
              </div>
              <div
                class="kt-entry"
              >
                <div
                  class="kt-entry-head"
                >
                  <div
                    class="left"
                  >
                    <span
                      class="idx"
                    >
                      03
                    </span>
                    <span
                      class="role"
                    >
                      Software Engineer
                    </span>
                    <span
                      class="team"
                    >
                      Remote
                    </span>
                  </div>
                  <span
                    class="dates"
                  >
                    Jan 2020 – Jul 2022
                  </span>
                </div>
                <ul
                  class="kt-bullets"
                >
                  <li>
                    <p>
                      Shipped the company's first 
                      <strong>
                        public API
                      </strong>
                       with rate limiting, OAuth2, and SDKs in three languages.
                    </p>
                  </li>
                  <li>
                    <p>
                      Migrated the legacy monolith's auth module to a 
                      <strong>
                        standalone identity service
                      </strong>
                      , unblocking SSO integrations.
                    </p>
                  </li>
                  <li>
                    <p>
                      Cut average build times from 11 min to 90s by parallelizing the test matrix.
                    </p>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="kt-section-group"
            >
              <div
                class="kt-group-head"
              >
                <h3>
                  Bytework
                </h3>
                <span
                  class="tenure"
                >
                  May 2018 – Aug 2018
                </span>
              </div>
              <div
                class="kt-entry"
              >
                <div
                  class="kt-entry-head"
                >
                  <div
                    class="left"
                  >
                    <span
                      class="idx"
                    >
                      04
                    </span>
                    <span
                      class="role"
                    >
                      Software Engineer Intern
                    </span>
                    <span
                      class="team"
                    >
                      Remote
                    </span>
                  </div>
                  <span
                    class="dates"
                  >
                    May 2018 – Aug 2018
                  </span>
                </div>
                <ul
                  class="kt-bullets"
                >
                  <li>
                    <p>
                      Built a small 
                      <strong>
                        internal log aggregator
                      </strong>
                       in Go on top of Kafka, replacing a brittle cron job.
                    </p>
                  </li>
                  <li>
                    <p>
                      Earned a 
                      <strong>
                        return offer
                      </strong>
                       for a full-time role.
                    </p>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </main>
        <footer
          class="kt-foot"
        >
          <span>
            avery-park
          </span>
          <span>
            senior software engineer · platform
          </span>
        </footer>
      </div>
    </div>
  </article>
</div>
`;

exports[`templates render against sample.md > minimal-mono renders without throwing 1`] = `
<div>
  <article
    class="resume-minimal-mono"
  >
    <header
      class="header"
    >
      <div>
        <h1>
          Avery Park
        </h1>
        <div
          class="title"
        >
          senior software engineer · platform
        </div>
      </div>
      <div
        class="contact"
      >
        <div>
          <a
            href="mailto:avery@example.com"
          >
            avery@example.com
          </a>
        </div>
        <div>
          New York, NY
        </div>
        <div>
          <a
            href="https://example.com"
          >
            averypark.dev
          </a>
        </div>
        <div>
          <a
            href="https://github.com"
          >
            github.com/averypark
          </a>
        </div>
        <div>
          <a
            href="https://linkedin.com"
          >
            in/averypark
          </a>
        </div>
      </div>
    </header>
    <section>
      <h2>
        Summary
      </h2>
      <div>
        <p>
          I build 
          <strong>
            resilient backend systems and the platforms that run them
          </strong>
          . I prefer small, reversible changes and clear interfaces. Software should be 
          <em>
            boring in production
          </em>
           and useful to its users.
        </p>
      </div>
    </section>
    <section>
      <h2>
        Experience
      </h2>
      <div
        class="entry"
        data-print-entry="true"
      >
        <div
          class="entry-head"
        >
          <div>
            <span
              class="entry-title"
            >
              Senior Software Engineer
            </span>
             
            <span
              class="entry-subtitle"
            >
              @ 
              Coral Labs
            </span>
          </div>
          <div
            class="entry-meta"
          >
            Mar 2024 – Present
             · 
            New York, NY
          </div>
        </div>
        <ul>
          <li>
            <p>
              Led the migration of the events pipeline to a 
              <strong>
                horizontally-sharded Kafka cluster
              </strong>
              , reducing p99 latency by 3x.
            </p>
          </li>
          <li>
            <p>
              Owned the on-call rotation for the platform team - 
              <strong>
                reduced pages 60%
              </strong>
               over two quarters through better alerting and runbooks.
            </p>
          </li>
          <li>
            <p>
              Mentored four engineers through L4 → L5 promotions.
            </p>
          </li>
        </ul>
      </div>
      <div
        class="entry"
        data-print-entry="true"
      >
        <div
          class="entry-head"
        >
          <div>
            <span
              class="entry-title"
            >
              Software Engineer 2
            </span>
             
            <span
              class="entry-subtitle"
            >
              @ 
              Coral Labs
            </span>
          </div>
          <div
            class="entry-meta"
          >
            Aug 2022 – Mar 2024
             · 
            New York, NY
          </div>
        </div>
        <ul>
          <li>
            <p>
              Designed and shipped the 
              <strong>
                billing pipeline
              </strong>
               processing 12M events/day on Kafka + Postgres.
            </p>
          </li>
          <li>
            <p>
              Built the 
              <strong>
                internal feature-flag service
              </strong>
               used across 40+ microservices.
            </p>
          </li>
          <li>
            <p>
              Drove 
              <strong>
                architecture-level reviews
              </strong>
               for cross-team launches.
            </p>
          </li>
        </ul>
      </div>
      <div
        class="entry"
        data-print-entry="true"
      >
        <div
          class="entry-head"
        >
          <div>
            <span
              class="entry-title"
            >
              Software Engineer
            </span>
             
            <span
              class="entry-subtitle"
            >
              @ 
              Acme Inc
            </span>
          </div>
          <div
            class="entry-meta"
          >
            Jan 2020 – Jul 2022
             · 
            Remote
          </div>
        </div>
        <ul>
          <li>
            <p>
              Shipped the company's first 
              <strong>
                public API
              </strong>
               with rate limiting, OAuth2, and SDKs in three languages.
            </p>
          </li>
          <li>
            <p>
              Migrated the legacy monolith's auth module to a 
              <strong>
                standalone identity service
              </strong>
              , unblocking SSO integrations.
            </p>
          </li>
          <li>
            <p>
              Cut average build times from 11 min to 90s by parallelizing the test matrix.
            </p>
          </li>
        </ul>
      </div>
      <div
        class="entry"
        data-print-entry="true"
      >
        <div
          class="entry-head"
        >
          <div>
            <span
              class="entry-title"
            >
              Software Engineer Intern
            </span>
             
            <span
              class="entry-subtitle"
            >
              @ 
              Bytework
            </span>
          </div>
          <div
            class="entry-meta"
          >
            May 2018 – Aug 2018
             · 
            Remote
          </div>
        </div>
        <ul>
          <li>
            <p>
              Built a small 
              <strong>
                internal log aggregator
              </strong>
               in Go on top of Kafka, replacing a brittle cron job.
            </p>
          </li>
          <li>
            <p>
              Earned a 
              <strong>
                return offer
              </strong>
               for a full-time role.
            </p>
          </li>
        </ul>
      </div>
    </section>
    <section>
      <h2>
        Projects
      </h2>
      <div
        class="entry"
        data-print-entry="true"
      >
        <div
          class="entry-head"
        >
          <div>
            <span
              class="entry-title"
            >
              Loomroute
            </span>
             
            <span
              class="entry-subtitle"
            >
              @ 
              loomroute.dev
            </span>
          </div>
          <div
            class="entry-meta"
          >
            Live
             · 
            Go
          </div>
        </div>
        <div>
          <p>
            Open-source URL routing library used by ~200 small SaaS apps. Live since 2024.
          </p>
        </div>
      </div>
      <div
        class="entry"
        data-print-entry="true"
      >
        <div
          class="entry-head"
        >
          <div>
            <span
              class="entry-title"
            >
              Tinytrace
            </span>
             
            <span
              class="entry-subtitle"
            >
              @ 
              github.com/example/tinytrace
            </span>
          </div>
          <div
            class="entry-meta"
          >
            OSS
             · 
            Rust
          </div>
        </div>
        <div>
          <p>
            Minimal distributed tracing library - span model, OTLP export, ~3k lines.
          </p>
        </div>
      </div>
    </section>
    <section>
      <h2>
        Awards
      </h2>
      <div
        class="entry"
        data-print-entry="true"
      >
        <div
          class="entry-head"
        >
          <div>
            <span
              class="entry-title"
            >
              Engineering Excellence
            </span>
             
            <span
              class="entry-subtitle"
            >
              @ 
              Coral Labs
            </span>
          </div>
          <div
            class="entry-meta"
          >
            2025
          </div>
        </div>
      </div>
      <div
        class="entry"
        data-print-entry="true"
      >
        <div
          class="entry-head"
        >
          <div>
            <span
              class="entry-title"
            >
              Best Internship Project
            </span>
             
            <span
              class="entry-subtitle"
            >
              @ 
              Bytework
            </span>
          </div>
          <div
            class="entry-meta"
          >
            2018
          </div>
        </div>
      </div>
    </section>
    <section>
      <h2>
        Education
      </h2>
      <div
        class="entry"
        data-print-entry="true"
      >
        <div
          class="entry-head"
        >
          <div>
            <span
              class="entry-title"
            >
              B.S. Computer Science
            </span>
             
            <span
              class="entry-subtitle"
            >
              @ 
              Northern State University
            </span>
          </div>
          <div
            class="entry-meta"
          >
            2014 – 2018
             · 
            Remote, USA
          </div>
        </div>
      </div>
    </section>
    <section>
      <h2>
        Skills
      </h2>
      <div
        class="skills-row"
      >
        <strong>
          Languages
          :
        </strong>
         
        Go, TypeScript, Python, Rust
      </div>
      <div
        class="skills-row"
      >
        <strong>
          Backend
          :
        </strong>
         
        Postgres, Redis, Kafka, gRPC, GraphQL
      </div>
      <div
        class="skills-row"
      >
        <strong>
          Frontend
          :
        </strong>
         
        React, Next.js, Tailwind, Vite
      </div>
      <div
        class="skills-row"
      >
        <strong>
          Platform
          :
        </strong>
         
        AWS, Kubernetes, Docker, Terraform, GitHub Actions
      </div>
    </section>
  </article>
</div>
`;
